[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/World/grasstileset.tres" type="TileSet" id=1]
[ext_resource path="res://Scenes/World/grassitems.tres" type="TileSet" id=2]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Misc/Error.wav" type="AudioStream" id=3]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Random/Random4.wav" type="AudioStream" id=4]
[ext_resource path="res://Scripts/World/Stages/Level1.gd" type="Script" id=5]
[ext_resource path="res://Scenes/World/items/lightgem.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/World/items/BG.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Enemy/BatBoss.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Player/Health.tscn" type="PackedScene" id=9]
[ext_resource path="res://Sound/Groovy's Retro Sound Effects/Impact/Impact4.wav" type="AudioStream" id=10]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/World/BG/Path2D.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/World/BG/Bubbles.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/World/items/Bbone.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/World/items/Sbone.tscn" type="PackedScene" id=15]
[ext_resource path="res://Sound/BGSounds/WhatsApp Audio 2020-08-07 at 4.57.43 PM.ogg" type="AudioStream" id=16]
[ext_resource path="res://Scenes/World/BG/Fish.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/World/items/NextLevel.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/World/items/MovingPlatform.tscn" type="PackedScene" id=19]
[ext_resource path="res://Scenes/World/stone1.png" type="Texture" id=20]
[ext_resource path="res://Scenes/World/Stages/Paused.tscn" type="PackedScene" id=21]

[sub_resource type="Animation" id=1]
resource_name = "end"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Camera2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -271, -17 ) ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 458, 10 )

[node name="Boss" type="Node2D"]
script = ExtResource( 5 )
Fish = ExtResource( 17 )
Scene_name = "Boss"
health = ExtResource( 9 )

[node name="Player" parent="." instance=ExtResource( 11 )]
position = Vector2( 177, -18 )
collision_mask = 59

[node name="Camera2D" type="Camera2D" parent="Player"]
zoom = Vector2( 0.1, 0.1 )

[node name="items" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="items"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1
tile_data = PoolIntArray( -131061, 0, 0, -37, 3, 0, -34, 1, 0, -14, 1, 0, -13, 1, 0, -65528, 1, 0, 131063, 3, 0, 262139, 1, 0, 196610, 1, 0 )

[node name="TileMap2" type="TileMap" parent="items"]
tile_set = ExtResource( 1 )
cell_size = Vector2( 8, 8 )
cell_custom_transform = Transform2D( 8, 0, 0, 8, 0, 0 )
format = 1
tile_data = PoolIntArray( -458746, 0, 0, -458745, 0, 3, -393210, 0, 196608, -393209, 0, 196611, -196619, 0, 0, -196618, 0, 3, -262136, 0, 0, -262135, 0, 3, -131083, 0, 196608, -131082, 0, 196611, -131081, 0, 0, -131080, 0, 3, -196600, 0, 196608, -196599, 0, 196611, -65545, 0, 196608, -65544, 0, 196611, -131051, 0, 0, -131050, 0, 3, -65529, 0, 0, -65528, 0, 2, -65527, 0, 2, -65526, 0, 2, -65525, 0, 2, -65524, 0, 2, -65523, 0, 1, -65522, 0, 1, -65521, 0, 1, -65520, 0, 1, -65519, 0, 2, -65518, 0, 2, -65517, 0, 1, -65516, 0, 1, -65515, 0, 131076, -65514, 0, 65539, 65499, 0, 0, 65500, 0, 2, 65501, 0, 1, 65502, 0, 1, 65503, 0, 2, 65504, 0, 3, 65522, 0, 0, 65523, 0, 2, 65524, 0, 2, 65525, 0, 3, 7, 0, 65536, 8, 0, 196613, 9, 0, 196609, 10, 0, 196610, 11, 0, 196610, 12, 0, 196610, 13, 0, 196610, 14, 0, 196609, 15, 0, 196610, 16, 0, 196609, 17, 0, 196609, 18, 0, 196610, 19, 0, 196610, 20, 0, 196609, 21, 0, 196609, 22, 0, 196611, 131035, 0, 196608, 131036, 0, 196612, 131037, 0, 65538, 131038, 0, 65537, 131039, 0, 196613, 131040, 0, 196611, 131058, 0, 196608, 131059, 0, 196609, 131060, 0, 196609, 131061, 0, 196611, 65542, 0, 0, 65543, 0, 131076, 65544, 0, 65539, 196572, 0, 196608, 196573, 0, 196610, 196574, 0, 196609, 196575, 0, 196611, 196598, 0, 0, 196599, 0, 2, 196600, 0, 3, 131078, 0, 196608, 131079, 0, 196610, 131080, 0, 196611, 262134, 0, 196608, 262135, 0, 196610, 262136, 0, 196611, 327674, 0, 0, 327675, 0, 2, 327676, 0, 2, 327677, 0, 2, 327678, 0, 1, 327679, 0, 2, 262144, 0, 2, 262145, 0, 2, 262146, 0, 2, 262147, 0, 2, 262148, 0, 2, 262149, 0, 1, 262150, 0, 3, 393210, 0, 65536, 393211, 0, 131073, 393212, 0, 131073, 393213, 0, 65537, 393214, 0, 131074, 393215, 0, 131074, 327680, 0, 131074, 327681, 0, 131073, 327682, 0, 65537, 327683, 0, 131074, 327684, 0, 131073, 327685, 0, 131074, 327686, 0, 65539, 458744, 0, 0, 458745, 0, 2, 458746, 0, 131076, 458747, 0, 65538, 458748, 0, 65538, 458749, 0, 65538, 458750, 0, 65538, 458751, 0, 131074, 393216, 0, 131074, 393217, 0, 131073, 393218, 0, 65538, 393219, 0, 131074, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 131077, 393223, 0, 2, 393224, 0, 1, 393225, 0, 2, 393226, 0, 2, 393227, 0, 2, 393228, 0, 1, 393229, 0, 2, 393230, 0, 2, 393231, 0, 2, 393232, 0, 1, 393233, 0, 3, 524280, 0, 196608, 524281, 0, 196612, 524282, 0, 131073, 524283, 0, 65537, 524284, 0, 65537, 524285, 0, 65537, 524286, 0, 65538, 524287, 0, 65538, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 131074, 458755, 0, 131074, 458756, 0, 131074, 458757, 0, 131073, 458758, 0, 131074, 458759, 0, 65538, 458760, 0, 65537, 458761, 0, 131074, 458762, 0, 65538, 458763, 0, 65537, 458764, 0, 65538, 458765, 0, 131074, 458766, 0, 131073, 458767, 0, 65538, 458768, 0, 131073, 458769, 0, 65539, 589817, 0, 131072, 589818, 0, 65538, 589819, 0, 131073, 589820, 0, 65538, 589821, 0, 65537, 589822, 0, 65538, 589823, 0, 65537, 524288, 0, 65538, 524289, 0, 65538, 524290, 0, 65537, 524291, 0, 131073, 524292, 0, 131073, 524293, 0, 131074, 524294, 0, 65537, 524295, 0, 65538, 524296, 0, 65538, 524297, 0, 131073, 524298, 0, 131074, 524299, 0, 65538, 524300, 0, 65538, 524301, 0, 65538, 524302, 0, 65538, 524303, 0, 196613, 524304, 0, 196610, 524305, 0, 196611, 655353, 0, 196608, 655354, 0, 196612, 655355, 0, 65538, 655356, 0, 65538, 655357, 0, 131074, 655358, 0, 65537, 655359, 0, 65538, 589824, 0, 131073, 589825, 0, 65537, 589826, 0, 131073, 589827, 0, 65538, 589828, 0, 65538, 589829, 0, 65537, 589830, 0, 131073, 589831, 0, 131074, 589832, 0, 131074, 589833, 0, 65537, 589834, 0, 131073, 589835, 0, 65538, 589836, 0, 65538, 589837, 0, 65537, 589838, 0, 65538, 589839, 0, 65539, 720890, 0, 131072, 720891, 0, 131073, 720892, 0, 131073, 720893, 0, 65538, 720894, 0, 131074, 720895, 0, 65537, 655360, 0, 131073, 655361, 0, 65537, 655362, 0, 131073, 655363, 0, 131073, 655364, 0, 131074, 655365, 0, 65538, 655366, 0, 65538, 655367, 0, 65537, 655368, 0, 131073, 655369, 0, 131073, 655370, 0, 131073, 655371, 0, 65538, 655372, 0, 131073, 655373, 0, 65537, 655374, 0, 131074, 655375, 0, 131075, 786426, 0, 131072, 786427, 0, 65538, 786428, 0, 131074, 786429, 0, 65537, 786430, 0, 131074, 786431, 0, 65538, 720896, 0, 65537, 720897, 0, 131073, 720898, 0, 131073, 720899, 0, 65537, 720900, 0, 65537, 720901, 0, 131074, 720902, 0, 131073, 720903, 0, 131074, 720904, 0, 131074, 720905, 0, 65538, 720906, 0, 131074, 720907, 0, 131073, 720908, 0, 65537, 720909, 0, 65538, 720910, 0, 131073, 720911, 0, 65539, 851962, 0, 196608, 851963, 0, 196609, 851964, 0, 196609, 851965, 0, 196609, 851966, 0, 196610, 851967, 0, 196609, 786432, 0, 196610, 786433, 0, 196609, 786434, 0, 196609, 786435, 0, 196610, 786436, 0, 196610, 786437, 0, 196609, 786438, 0, 196609, 786439, 0, 196610, 786440, 0, 196610, 786441, 0, 196610, 786442, 0, 196610, 786443, 0, 196610, 786444, 0, 196610, 786445, 0, 196609, 786446, 0, 196609, 786447, 0, 196611 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="items"]
stream = ExtResource( 16 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="items"]
stream = ExtResource( 4 )

[node name="FishTimer" type="Timer" parent="items"]

[node name="AudioStreamPlayer2D3" type="AudioStreamPlayer2D" parent="items"]
stream = ExtResource( 10 )

[node name="Hurt" type="AudioStreamPlayer2D" parent="items"]
stream = ExtResource( 3 )

[node name="Path2D" parent="items" instance=ExtResource( 12 )]

[node name="PathFollow2D2" type="PathFollow2D" parent="items/Path2D"]
position = Vector2( 48, -40 )
rotation = 3.14159

[node name="Particles2D" parent="items" instance=ExtResource( 13 )]
position = Vector2( -86.7207, 60.4417 )

[node name="Particles2D2" parent="items" instance=ExtResource( 13 )]
position = Vector2( 77.6691, 61.6097 )

[node name="Bbone" parent="items" instance=ExtResource( 14 )]
position = Vector2( -72.4133, 13.1395 )
z_index = -1

[node name="Sbone" parent="items" instance=ExtResource( 15 )]
position = Vector2( 44.6743, 30.6588 )
z_index = -1

[node name="Sbone2" parent="items" instance=ExtResource( 15 )]
position = Vector2( 105.992, -9.63563 )
rotation = 1.52367
z_index = -1

[node name="MovingPlatform3" parent="items" instance=ExtResource( 19 )]
position = Vector2( -176, 2 )

[node name="BG12" parent="items" instance=ExtResource( 7 )]
position = Vector2( 34, 9 )

[node name="BG13" parent="items" instance=ExtResource( 7 )]
position = Vector2( 44, 5 )

[node name="AnimatedSprite" parent="items/BG13" index="0"]
z_index = -2
animation = "eel"

[node name="BG14" parent="items" instance=ExtResource( 7 )]
position = Vector2( 44, 5 )

[node name="AnimatedSprite" parent="items/BG14" index="0"]
position = Vector2( 72, -50 )
animation = "eel"

[node name="Enemies" type="Node2D" parent="."]

[node name="BatBoss" parent="Enemies" instance=ExtResource( 8 )]
speed = 3
gum_time = 0.06
reval = 20

[node name="UI" type="Node2D" parent="."]

[node name="NextLevel" parent="." instance=ExtResource( 18 )]
position = Vector2( -292, -5 )
next_scene = "res://Scenes/World/Stages/stone1.tscn"

[node name="lightgem" parent="." instance=ExtResource( 6 )]
position = Vector2( -271, -10 )
frame = 0

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.1, 0.1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/end = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 1, 146 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
process_mode = 0
wait_time = 8.0

[node name="Timer2" type="Timer" parent="."]
process_mode = 0
wait_time = 8.0

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 52, 3 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( -68, 12 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -272, -2 )
z_index = -2
texture = ExtResource( 20 )
region_enabled = true
region_rect = Rect2( 37.0589, 44.0281, 5.85537, 9.63841 )

[node name="Paused" parent="." instance=ExtResource( 21 )]
[connection signal="get_hit" from="Player" to="." method="_on_Player_get_hit"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="dead" from="Enemies/BatBoss" to="." method="_on_BatBoss_dead"]
[connection signal="get_hit" from="Enemies/BatBoss" to="." method="_on_BatBoss_get_hit"]
[connection signal="shot" from="Enemies/BatBoss" to="." method="_on_BatBoss_shot"]
[connection signal="spawn" from="Enemies/BatBoss" to="." method="_on_BatBoss_spawn"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]

[editable path="items/BG13"]

[editable path="items/BG14"]
